v1.0.8 - Added dark mode for checkboxes. - Added headers on panel. - Added comments. - Replaced non unique elements from using id tags to class. - Replaced margins with padding to fix scrolling for window. - Minor optimisation for match end checking.

--- a/css/main.css
+++ b/css/main.css
@@ -1,72 +1,92 @@
 html, body {
     height: 100%;
     width: 100%;
-    margin-top: 0.2%;
-    margin-bottom: 0.2%;
-    overflow: hidden;
+    padding-top: 5px;
+    overflow-x: auto;
+    overflow-y: auto;
 }
 
+/* JSON text area */
 #jsonTextArea {
     min-width: 100%;
-    height: 50vh;
+    height: 45vh;
     min-height: 20vh;
-    max-height: 50vh;
+    max-height: 45vh;
 }
 
+/* Friendlies and enemies container */
 #card-friendlies, #card-enemies {
     min-height: 8.5vh;
 }
 
+/* Combat log header */
 #combat-log-header {
     min-height: 8vh;
-    overflow-x: hidden;
+    overflow-x: auto;
     overflow-y: scroll;
 }
 
+/* Combat log viewer container */
 #card-combat-log {
     /* 75vh is the max but borders will be cut off on the bottom due to top margin */
     /* Number is determined by the top values (100vh - card-friendlies - card-enemies - combat-log-header) */
     max-height: 72.7vh; 
-    overflow-x: hidden;
+    overflow-x: auto;
     overflow-y: auto;
 }
 
-#header-text {
+/* Combat log header and side panel headers */
+.text-header {
     font-weight: bold;
 }
 
-#log-entry {
+/* Individual log entries */
+.log-entry {
     min-height: 30px;
 }
 
-#log-damage-colour, #log-enemy-colour {
+/* Damage and enemy colour */
+.log-damage-colour, .log-enemy-colour {
     color: rgb(187, 45, 59);
 }
 
-#log-heal-colour, #log-friendly-colour {
+/* Heal and friendly colour */
+.log-heal-colour, .log-friendly-colour {
     color: rgb(21, 115, 71);
 }
 
-#log-dropdown-button {
+/* Tags dropdown button */
+.log-dropdown-button {
     padding: 2%;
 }
 
+/* Bad */
 .lightmode-bg {
     background-color: whitesmoke;
 }
 
+/* Bad */
 .lightmode-text {
     color: black;
 }
 
+/* Good */
 .darkmode-bg {
     background-color: black;
 }
 
+/* Good */
 .darkmode-text {
     color: whitesmoke;
 }
 
+/* Checkbox dark mode */
+.form-check-input.checkbox-darkmode {
+    background-color: rgb(80, 80, 80);
+    border-color:black;
+}
+
+/* Visible scrollbar */
 ::-webkit-scrollbar {
     width: 10px;
 }
@@ -84,27 +104,26 @@ html, body {
 }
 
 /* Little hack for "hidden" scrollbar while taking up space of the container */
-
-.lightmode-scroll::-webkit-scrollbar-track {
+.lightmode-hidden-scroll::-webkit-scrollbar-track {
     background-color: whitesmoke;
 }
 
-.lightmode-scroll::-webkit-scrollbar-thumb {
+.lightmode-hidden-scroll::-webkit-scrollbar-thumb {
     background-color: whitesmoke;
 }
 
-.lightmode-scroll::-webkit-scrollbar-thumb:hover {
+.lightmode-hidden-scroll::-webkit-scrollbar-thumb:hover {
     background-color: whitesmoke;
 }
 
-.darkmode-scroll::-webkit-scrollbar-track {
+.darkmode-hidden-scroll::-webkit-scrollbar-track {
     background-color: black;
 }
 
-.darkmode-scroll::-webkit-scrollbar-thumb {
+.darkmode-hidden-scroll::-webkit-scrollbar-thumb {
     background-color: black;
 }
 
-.darkmode-scroll::-webkit-scrollbar-thumb:hover {
+.darkmode-hidden-scroll::-webkit-scrollbar-thumb:hover {
     background-color: black;
 }
